# touslesjeux

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_games_and_jobs_tables.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  worker.py
backend/app/routers/: collections.py  games.py  health.py
backend/app/services/: collector.py  dedup.py  enricher.py  scraper.py
backend/tests/: conftest.py  test_auth.py  test_collections.py  test_collector.py  test_dedup.py  test_enricher.py  test_games.py  test_models.py  test_schemas.py  test_scraper.py
docs/superpowers/plans/: 2026-03-24-touslesjeux.md  2026-03-29-exa-jina-scraper.md
docs/superpowers/specs/: 2026-03-23-touslesjeux-design.md  2026-03-29-exa-jina-scraper-design.md  2026-03-30-listicle-extraction-design.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CategorySelector.tsx  CollectionProgress.tsx  GameDetail.tsx  GameFilters.tsx  GameForm.tsx  GameTable.tsx  StatsCards.tsx
frontend/src/hooks/: useCollections.ts  useGames.ts  useSSE.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Collect.tsx  CollectionDetail.tsx  Dashboard.tsx  GameDetail.tsx  GameEdit.tsx  GameList.tsx
